--- a/roles/mediamarkov/defaults/main.yml
+++ b/roles/mediamarkov/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 app_name: flowriter_studio
 app_user: markov
+app_port: 8000
 keyfile: id_rsa
 # Module that starts flask site
 flask_object_module: gen_time
