Restructure tasks for greater clarity

--- a/roles/mediamarkov/tasks/main.yml
+++ b/roles/mediamarkov/tasks/main.yml
@@ -9,20 +9,8 @@
     shell: /bin/bash
     state: present
 
-- name: pip packages
-  pip:
-    executable: pip3
-    name:
-      - setuptools
-      - flask
-      - markovify
-      - bs4
-      - nltk
-      - uwsgi
-      - uwsgiconf
-
 # Deploy app in its directory
 - import_tasks: app_dir.yml
 
-# Start uwsgi for app on port 8000
+# Enable and start uwsgi for app on port 8000
 - import_tasks: uwsgi.yml
