--- a/roles/flowriter_studio/defaults/main.yml
+++ b/roles/flowriter_studio/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 app_name: flowriter_studio
-app_user: markov
+app_user: flowriter_studio
 app_port: 8000
 keyfile: id_rsa
 # Module that starts flask site
