--- a/roles/flowriter_studio/vars/main.yml
+++ b/roles/flowriter_studio/vars/main.yml
@@ -1,7 +1,8 @@
 ---
 app_user_home: /home/{{ app_user }}
-app_dir: "{{ app_user_home}}/{{ app_name }}"
-ssh_dir: "{{ app_user_home}}/.ssh"
+app_dir: "{{ app_user_home }}/{{ app_name }}"
+app_virtualenv: "{{ app_user_home }}/{{ app_name }}_virtualenv"
+ssh_dir: "{{ app_user_home }}/.ssh"
 keyfile_dest: "{{ ssh_dir }}/id_rsa"
 service_file_name: "{{ app_name }}.service"
 service_file_dest: /etc/systemd/system/{{ service_file_name }}
