--- a/roles/flowriter_studio/tasks/main.yml
+++ b/roles/flowriter_studio/tasks/main.yml
@@ -9,7 +9,9 @@
     home: "{{ app_user_home }}"
     shell: /bin/bash
     state: present
-  become: root
+  become: yes
+  become_user: root
+  tags: root
 
 # Deploy app in its directory
 - import_tasks: app_dir.yml
@@ -17,3 +19,4 @@
 # Enable and start uwsgi for app on port 8000
 - import_tasks: uwsgi.yml
   become: root
+  tags: root
