--- a/roles/flowriter_studio/tasks/app_dir.yml
+++ b/roles/flowriter_studio/tasks/app_dir.yml
@@ -28,4 +28,7 @@
     key_file: "{{ keyfile_dest }}"
     accept_hostkey: yes
     update: yes
+  become: yes
+  become_user: "{{ app_user }}"
+
   notify: restart uwsgi
