Enable logging with systemd
Specifying KillSignal=SIGQUIT seems required by use of systemd_logger, since
otherwise uwsgi does not respond to the SIGTERM that systemd sends by
default

--- a/roles/flowriter_studio/defaults/main.yml
+++ b/roles/flowriter_studio/defaults/main.yml
@@ -6,3 +6,4 @@ keyfile: id_rsa
 # Module that starts flask site
 flask_object_module: app
 git_branch: master
+log_file: /var/log/{{ app_name }}.log
